namespace TuberTreats.Models;

public class Customer
{
    
}