namespace TuberTreats.Models;

public class Topping
{
    
}