namespace TuberTreats.Models;

public class TuberDriver
{
    
}
