namespace TuberTreats.Models;

public class TuberTopping
{
    
}