Table TuberOrder {
    Id int [pk]
    OrderPlacedOnDate DateTime 
    CustomerId int 
    TuberDriverId int 
    DeliveredOnDate DateTime 
}

Table Topping {
    Id int [pk]
    Name string 
}

Table TuberTopping {
    Id int [pk]
    TuberOrderId int 
    ToppingId int 
}

Table TuberDriver {
    Id int [pk]
    Name string
}

Table Customer {
    Id int [pk]
    Name string
    Address string
}

ref: TuberOrder.TuberDriverId > TuberDriver.Id
ref: TuberOrder.CustomerId > Customer.Id
ref: TuberTopping.TuberOrderId > TuberOrder.Id
ref: TuberTopping.ToppingId > Topping.Id